--- a/Ressources/Private/styles/scss/subpage.scss
+++ b/Ressources/Private/styles/scss/subpage.scss
@@ -1,5 +1,3 @@
-@use "./use/variables" as *;
-
 * {
   margin: 0;
   padding: 0;
@@ -137,14 +135,15 @@ body {
   font-weight: bold;
 }
 .has-subPage {
-    display: flex;
-    justify-content: space-between;
-    
-    &:after {
-      content:"+";
-    }
+  display: flex;
+  justify-content: space-between;
+
+  &:after {
+    content: "+";
+  }
 }
-.nav-level-1 li a, p {
+.nav-level-1 li a,
+p {
   text-decoration: none;
   color: white;
 
@@ -175,7 +174,7 @@ body {
     background-color: #ee8018;
 
     &:before {
-      content:"";
+      content: "";
       display: block;
       position: relative;
       left: -30px;
@@ -185,7 +184,7 @@ body {
       background-color: #ee8018;
     }
     &:after {
-      content:"";
+      content: "";
       display: block;
       position: relative;
       left: 30px;
@@ -203,7 +202,7 @@ body {
     text-align: center;
   }
 
-  p{
+  p {
     color: white;
     font-size: 16px;
     line-height: 20px;
@@ -221,7 +220,18 @@ body {
     display: flex;
 
     li {
-      padding-right: 20px;
+      padding-right: 15px;
+
+      &:first-child a:after {
+        content: "->";
+        position: relative;
+        padding-left: 15px;
+      }
+
+      &:last-child a {
+        color: #00a0dd;
+        border-bottom: 3px solid #00a0dd;
+      }
 
       a {
         text-decoration: none;
@@ -259,84 +269,93 @@ body {
     }
   }
 
-  .teaser {
-    width: 100%;
-    height: 280px;
+  .content-element-1 {
     background-color: white;
-    margin-bottom: 30px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    color: black;
+    padding: 40px 80px 80px 80px;
 
-    img {
-      width: 40%;
+    .image-title {
+      padding: 0px 0px 40px 0px;
     }
 
-    .teaser-content {
-      width: 60%;
-      padding: 30px 100px 60px 40px;
-
-      .teaser-category {
-        color: #888888;
-        padding-bottom: 40px;
-        font-size: 15px;
+    .image-container {
+      width: 100%;
+      height: 700px;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
       }
+    }
 
-      h2 {
-        font-weight: bold;
-        font-size: 18px;
-
-        &:before {
-          content: "";
-          position: relative;
-          top: -20px;
-          display: block;
-          width: 40px;
-          height: 4px;
-          background-color: #00a0dd;
-        }
-      }
-
-      p {
-        font-size: 16px;
-        line-height: 20px;
-        text-align: justify;
-        padding: 20px 0px;
-        color: black;
-      }
-
-      a {
-        font-weight: bold;
-        text-transform: uppercase;
-        color: #00a0dd;
-        text-decoration: none;
-
-        &:before {
-        content:"->";
-        padding-right: 8px;
-        font-weight: bold;
-        }
-
-        &:hover {
-          border-bottom: 2px solid #00a0dd;
-        }
-      }
+    h2 {
+      font-weight: bold;
+      font-size: 24px;
+      line-height: 32px;
+      padding: 40px 0px 10px 0px;
+    }
+    h3 {
+      font-size: 20px;
+      font-weight: normal;
+      font-style: italic;
+      padding: 0px 0px 20px 0px;
+    }
+    p {
+      color: black;
+      font-size: 18px;
+      line-height: 27px;
     }
   }
 
-  .cta {
-    background-color: #00a0dd;
-    display: block;
-    margin-top: 80px;
-    width: fit-content;
-    color: white;
-    border: none;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-weight: bold;
-    padding: 20px 50px;
-    font-size: 14px;
+  .content-element-2 {
+    padding-top: 40px;
+    .teaser {
+      background-color: #ee8018;
+      width: 100%;
+      height: 80px;
+      display: flex;
+      justify-content: space-between;
+      padding: 0px 80px;
+      line-height: 80px;
+
+      a {
+        color: white;
+        font-weight: bold;
+        font-size: 18px;
+        text-decoration: none;
+
+        &:last-child:before {
+          content: "->";
+          padding-right: 10px;
+        }
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+    .teaser-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: white;
+      padding: 80px;
+
+      .teaser-text {
+        width: 600px;
+
+        h3 {
+          font-size: 20px;
+          padding: 0px 0px 40px 0px;
+        }
+
+        p {
+          color: black;
+          font-size: 18px;
+          line-height: 27px;
+        }
+      }
+    }
   }
 }
 
@@ -351,13 +370,10 @@ body {
   color: black;
 
   &:after {
-    content: "-"
+    content: "-";
   }
 }
-
 
 .menu.hidden-teaser > .menu-teaser {
   display: none;
 }
-
-
