--- a/Ressources/Private/styles/scss/main.scss
+++ b/Ressources/Private/styles/scss/main.scss
@@ -52,16 +52,26 @@ body {
       li {
         display: inline-block;
         padding: 25px 15px;
+        cursor: pointer;
 
         p {
           display: inline;
           vertical-align: 10px;
           margin-right: 10px;
+          color: black;
         }
 
         &:last-child {
           padding-right: 0;
           vertical-align: sub;
+        }
+
+        svg {
+          fill: black;
+          transition: all 0.2s ease;
+        }
+        svg:hover {
+          fill: #00a0dd;
         }
       }
     }
@@ -137,14 +147,15 @@ body {
   font-weight: bold;
 }
 .has-subPage {
-    display: flex;
-    justify-content: space-between;
-    
-    &:after {
-      content:"+";
-    }
+  display: flex;
+  justify-content: space-between;
+
+  &:after {
+    content: "+";
+  }
 }
-.nav-level-1 li a, p {
+.nav-level-1 li a,
+p {
   text-decoration: none;
   color: white;
 
@@ -175,7 +186,7 @@ body {
     background-color: #ee8018;
 
     &:before {
-      content:"";
+      content: "";
       display: block;
       position: relative;
       left: -30px;
@@ -185,7 +196,7 @@ body {
       background-color: #ee8018;
     }
     &:after {
-      content:"";
+      content: "";
       display: block;
       position: relative;
       left: 30px;
@@ -203,7 +214,7 @@ body {
     text-align: center;
   }
 
-  p{
+  p {
     color: white;
     font-size: 16px;
     line-height: 20px;
@@ -236,6 +247,7 @@ body {
     }
   }
 }
+
 ////WRAPPER////
 .content-wrapper {
   margin: 0 auto;
@@ -293,7 +305,7 @@ body {
           top: -20px;
           display: block;
           width: 40px;
-          height: 4px;
+          height: 2px;
           background-color: #00a0dd;
         }
       }
@@ -304,6 +316,7 @@ body {
         text-align: justify;
         padding: 20px 0px;
         color: black;
+        cursor: auto;
       }
 
       a {
@@ -311,11 +324,12 @@ body {
         text-transform: uppercase;
         color: #00a0dd;
         text-decoration: none;
+        transition: all 0.2s ease;
 
         &:before {
-        content:"->";
-        padding-right: 8px;
-        font-weight: bold;
+          content: "->";
+          padding-right: 8px;
+          font-weight: bold;
         }
 
         &:hover {
@@ -328,7 +342,7 @@ body {
   .cta {
     background-color: #00a0dd;
     display: block;
-    margin-top: 80px;
+    margin-top: 60px;
     width: fit-content;
     color: white;
     border: none;
@@ -337,10 +351,102 @@ body {
     font-weight: bold;
     padding: 20px 50px;
     font-size: 14px;
+    transition: all 0.3s ease;
+
+    &:hover {
+      background-color: #1cb9f7;
+      text-decoration: underline;
+      transform: scale(1.03);
+    }
+  }
+
+  .content-element-2 {
+    padding-top: 40px;
+    .teaser {
+      background-color: #ee8018;
+      width: 100%;
+      height: 80px;
+      display: flex;
+      justify-content: space-between;
+      padding: 0px 80px;
+      line-height: 80px;
+      margin-bottom: 0px;
+      margin-top: 120px;
+
+      a {
+        color: white;
+        font-weight: bold;
+        font-size: 18px;
+        text-decoration: none;
+        transition: all 0.2s ease;
+
+        &:last-child:before {
+          content: "->";
+          padding-right: 10px;
+        }
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+    .teaser-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: white;
+      padding: 80px;
+
+      .teaser-text {
+        width: 600px;
+
+        h3 {
+          font-size: 20px;
+          padding: 0px 0px 40px 0px;
+        }
+
+        p {
+          color: black;
+          font-size: 18px;
+          line-height: 27px;
+          cursor: auto;
+        }
+      }
+    }
   }
 }
 
 ////FOOTER////
+.footer-container {
+  background-color: white;
+  overflow: hidden;
+  margin-top: 200px;
+
+  .footer {
+    height: 90px;
+    width: 1200px;
+    margin: 0 auto;
+
+    ul {
+      display: flex;
+      list-style: none;
+      justify-content: space-around;
+      line-height: 90px;
+
+      li a {
+        color: black;
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 14px;
+        text-transform: uppercase;
+
+        &:hover {
+          border-bottom: 2px solid black;
+        }
+      }
+    }
+  }
+}
 
 ////Click-Classes////
 .hidden {
@@ -351,13 +457,10 @@ body {
   color: black;
 
   &:after {
-    content: "-"
+    content: "-";
   }
 }
-
 
 .menu.hidden-teaser > .menu-teaser {
   display: none;
 }
-
-
