--- a/Ressources/Private/styles/scss/secondsub.scss
+++ b/Ressources/Private/styles/scss/secondsub.scss
@@ -1,4 +1,4 @@
-////MAIN////
+////Second Sub////
 
 
 @use "./use/variables" as *;
@@ -17,16 +17,22 @@ body {
   padding: 0;
 }
 
+.background-left {
+  position: absolute;
+  left: 0;
+  z-index: -2;
+  top: 1000px;
+}
 .background-right {
   position: absolute;
   right: 0;
   z-index: -2;
-  top: 890px;
+  top: 90px;
 }
 
-.background-left-bottom {
+.background-right-bottom {
   position: absolute;
-  left: 0;
+  right: 0;
   z-index: -2;
   bottom: 90px;
 }
@@ -249,7 +255,18 @@ p {
     display: flex;
 
     li {
-      padding-right: 20px;
+      padding-right: 15px;
+
+      &:first-child a:after {
+        content: "->";
+        position: relative;
+        padding-left: 15px;
+      }
+
+      &:last-child a {
+        color: #00a0dd;
+        border-bottom: 3px solid #00a0dd;
+      }
 
       a {
         text-decoration: none;
@@ -265,165 +282,163 @@ p {
   }
 }
 
-.header-image-container {
-  width: 100%;
-  margin: 0 auto;
-  height: 800px;
-  position: relative;
-  top: 90px;
-  z-index: -10;
-
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-}
 ////WRAPPER////
 .content-wrapper {
   margin: 0 auto;
   width: 1200px;
 
-  .header-image-container {
-    width: 100%;
-    height: 500px;
+  main {
+    padding-bottom: 400px;
+  }
 
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+  h1 {
+    padding: 250px 0 80px 0;
+
+    &:after {
+      content: "";
+      background-color: #00a0dd;
+      position: relative;
+      display: block;
+      width: 60px;
+      height: 6px;
+      bottom: -34px;
     }
   }
 
-  main {
-    padding-bottom: 400px;
+  .teaser {
+    width: 100%;
+    height: 280px;
+    background-color: white;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 
-    .header-text {
-      background-color: white;
-      position: absolute;
-      top: 700px;
-      margin-left: 360px;
-      width: 840px;
-      padding: 40px;
+    img {
+      width: 40%;
+    }
+
+    .teaser-content {
+      width: 60%;
+      padding: 30px 100px 60px 40px;
+
+      .teaser-category {
+        color: #888888;
+        padding-bottom: 40px;
+        font-size: 15px;
+      }
+
       h2 {
         font-weight: bold;
-        font-size: 24px;
-        line-height: 32px;
-        padding: 0px 0px 20px 0px;
+        font-size: 18px;
+
+        &:before {
+          content: "";
+          position: relative;
+          top: -20px;
+          display: block;
+          width: 40px;
+          height: 2px;
+          background-color: #00a0dd;
+        }
       }
+
       p {
-        color: black;
-        line-height: 22px;
         font-size: 16px;
-      }
-    }
-    h1 {
-      padding: 250px 0 80px 0;
-
-      &:after {
-        content: "";
-        background-color: #00a0dd;
-        position: relative;
-        display: block;
-        width: 60px;
-        height: 6px;
-        bottom: -34px;
-      }
-    }
-
-    .teaser-container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      .teaser {
-        width: 380px;
-        background-color: white;
-        margin-bottom: 30px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        img {
-          width: 100%;
-        }
-
-        .teaser-content {
-          width: 100%;
-          padding: 20px 30px 20px 40px;
-          .teaser-category {
-            color: #888888;
-            padding-bottom: 40px;
-            font-size: 15px;
-          }
-
-          h2 {
-            font-weight: bold;
-            font-size: 18px;
-          }
-
-          p {
-            font-size: 16px;
-            line-height: 20px;
-            text-align: justify;
-            padding: 20px 0px;
-            color: black;
-            cursor: auto;
-          }
-
-          a {
-            font-weight: bold;
-            text-transform: uppercase;
-            color: #00a0dd;
-            text-decoration: none;
-            transition: all 0.2s ease;
-
-            &:before {
-              content: "->";
-              padding-right: 8px;
-              font-weight: bold;
-            }
-
-            &:hover {
-              border-bottom: 2px solid #00a0dd;
-            }
-          }
-        }
-      }
-    }
-
-    .content-element-1 {
-        background-color: white;
+        line-height: 20px;
+        text-align: justify;
+        padding: 20px 0px;
         color: black;
-        padding: 40px 80px 80px 80px;
-        margin-top: 100px;
-    
-        .image-title {
-          padding: 0px 0px 40px 0px;
-        }
-    
-        .image-container {
-          width: 100%;
-          height: 700px;
-          img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-          }
-        }
-    
-        h2 {
+        cursor: auto;
+      }
+
+      a {
+        font-weight: bold;
+        text-transform: uppercase;
+        color: #00a0dd;
+        text-decoration: none;
+        transition: all 0.2s ease;
+
+        &:before {
+          content: "->";
+          padding-right: 8px;
           font-weight: bold;
-          font-size: 24px;
-          line-height: 32px;
-          padding: 40px 0px 10px 0px;
         }
+
+        &:hover {
+          border-bottom: 2px solid #00a0dd;
+        }
+      }
+    }
+  }
+
+  .cta {
+    background-color: #00a0dd;
+    display: block;
+    margin-top: 60px;
+    width: fit-content;
+    color: white;
+    border: none;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 20px 50px;
+    font-size: 14px;
+    transition: all 0.3s ease;
+
+    &:hover {
+      background-color: #1cb9f7;
+      text-decoration: underline;
+      transform: scale(1.03);
+    }
+  }
+
+  .content-element-2 {
+    padding-top: 40px;
+    .teaser {
+      background-color: #ee8018;
+      width: 100%;
+      height: 80px;
+      display: flex;
+      justify-content: space-between;
+      padding: 0px 80px;
+      line-height: 80px;
+      margin-bottom: 0px;
+      margin-top: 120px;
+
+      a {
+        color: white;
+        font-weight: bold;
+        font-size: 18px;
+        text-decoration: none;
+        transition: all 0.2s ease;
+
+        &:last-child:before {
+          content: "->";
+          padding-right: 10px;
+        }
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+    .teaser-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: white;
+      padding: 80px;
+
+      .teaser-text {
+        width: 600px;
+
         h3 {
           font-size: 20px;
-          font-weight: normal;
-          font-style: italic;
-          padding: 0px 0px 20px 0px;
+          padding: 0px 0px 40px 0px;
         }
+
         p {
           color: black;
           font-size: 18px;
@@ -431,6 +446,7 @@ p {
           cursor: auto;
         }
       }
+    }
   }
 }
 
