--- a/Ressources/Private/styles/scss/subpage.scss
+++ b/Ressources/Private/styles/scss/subpage.scss
@@ -1,443 +1,446 @@
+////SUB////
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-body {
-  position: relative;
-  background-color: #f0f0f0;
-  margin: 0;
-  padding: 0;
-}
-
-.background-left {
-  position: absolute;
-  left: 0;
-  z-index: -2;
-  top: 1000px;
-}
-.background-right {
-  position: absolute;
-  right: 0;
-  z-index: -2;
-  top: 90px;
-}
-
-.background-right-bottom {
-  position: absolute;
-  right: 0;
-  z-index: -2;
-  bottom: 90px;
-}
-
-////NAVBAR////
-.nav-container {
-  width: 100%;
-  background-color: white;
-  position: fixed;
-  z-index: 2;
-
-  .navbar {
-    background-color: white;
-    color: black;
-    display: flex;
-    justify-content: space-between;
-    height: 90px;
-    width: 1200px;
-    margin: 0 auto;
-
-    .logo {
-      padding: 15px;
-      position: relative;
-      top: 41px;
-
-      img {
-        background-color: white;
-        position: absolute;
-        margin: auto;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        padding: 30px;
-      }
-    }
-
-    .nav-items {
-      list-style: none;
-
-      li {
-        display: inline-block;
-        padding: 25px 15px;
-        cursor: pointer;
-
-        p {
-          display: inline;
-          vertical-align: 10px;
-          margin-right: 10px;
-          color: black;
-        }
-
-        &:last-child {
-          padding-right: 0;
-          vertical-align: sub;
-        }
-
-        svg {
-          fill: black;
-          transition: all 0.2s ease;
-        }
-        svg:hover {
-          fill: #00a0dd;
-        }
-      }
-    }
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
-
-  ////MENU-BUTTON////
-  .menuButton {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    display: flex;
+  
+  body {
+    position: relative;
+    background-color: #f0f0f0;
+    margin: 0;
     padding: 0;
   }
-  .line {
-    fill: none;
-    stroke: black;
-    stroke-width: 8;
-    transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
-      stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+  .background-left {
+    position: absolute;
+    left: 0;
+    z-index: -2;
+    top: 1000px;
   }
-  .line1 {
-    stroke-dasharray: 60 207;
-    stroke-width: 8;
+  .background-right {
+    position: absolute;
+    right: 0;
+    z-index: -2;
+    top: 90px;
   }
-  .line2 {
-    stroke-dasharray: 60 60;
-    stroke-width: 8;
+  
+  .background-right-bottom {
+    position: absolute;
+    right: 0;
+    z-index: -2;
+    bottom: 90px;
   }
-  .line3 {
-    stroke-dasharray: 60 207;
-    stroke-width: 8;
-  }
-  .opened .line1 {
-    stroke-dasharray: 90 207;
-    stroke-dashoffset: -134;
-    stroke-width: 8;
-  }
-  .opened .line2 {
-    stroke-dasharray: 1 60;
-    stroke-dashoffset: -30;
-    stroke-width: 8;
-  }
-  .opened .line3 {
-    stroke-dasharray: 90 207;
-    stroke-dashoffset: -134;
-    stroke-width: 8;
-  }
-}
-.menu {
-  background-color: #00a0dd;
-  z-index: 1;
-  position: absolute;
-  width: 1200px;
-  position: fixed;
-  top: 90px;
-  margin: 0 auto;
-  left: 0;
-  right: 0;
-  padding: 140px 100px 60px 100px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-.nav-level-1 {
-  width: 450px;
-}
-.nav-level-1,
-.nav-level-2 {
-  list-style: none;
-  font-size: 30px;
-  line-height: 70px;
-  font-weight: bold;
-}
-.has-subPage {
-  display: flex;
-  justify-content: space-between;
-
-  &:after {
-    content: "+";
-  }
-}
-.nav-level-1 li a,
-p {
-  text-decoration: none;
-  color: white;
-
-  &:hover {
-    color: black;
-    cursor: pointer;
-  }
-}
-
-.nav-level-2 li a {
-  text-decoration: none;
-  color: black;
-
-  &:hover {
-    color: white;
-  }
-}
-
-.menu-teaser {
-  width: 300px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  .menu-teaser-image {
-    height: 40px;
-    width: 20px;
-    background-color: #ee8018;
-
-    &:before {
-      content: "";
-      display: block;
-      position: relative;
-      left: -30px;
-      bottom: 20px;
-      height: 60px;
-      width: 20px;
-      background-color: #ee8018;
-    }
-    &:after {
-      content: "";
-      display: block;
-      position: relative;
-      left: 30px;
-      top: -110px;
+  
+  ////NAVBAR////
+  .nav-container {
+    width: 100%;
+    background-color: white;
+    position: fixed;
+    z-index: 2;
+  
+    .navbar {
+      background-color: white;
+      color: black;
+      display: flex;
+      justify-content: space-between;
       height: 90px;
-      width: 20px;
-      background-color: #ee8018;
+      width: 1200px;
+      margin: 0 auto;
+  
+      .logo {
+        padding: 15px;
+        position: relative;
+        top: 41px;
+  
+        img {
+          background-color: white;
+          position: absolute;
+          margin: auto;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          padding: 30px;
+        }
+      }
+  
+      .nav-items {
+        list-style: none;
+  
+        li {
+          display: inline-block;
+          padding: 25px 15px;
+          cursor: pointer;
+  
+          p {
+            display: inline;
+            vertical-align: 10px;
+            margin-right: 10px;
+            color: black;
+          }
+  
+          &:last-child {
+            padding-right: 0;
+            vertical-align: sub;
+          }
+  
+          svg {
+            fill: black;
+            transition: all 0.2s ease;
+          }
+          svg:hover {
+            fill: #00a0dd;
+          }
+        }
+      }
+    }
+  
+    ////MENU-BUTTON////
+    .menuButton {
+      background-color: transparent;
+      border: none;
+      cursor: pointer;
+      display: flex;
+      padding: 0;
+    }
+    .line {
+      fill: none;
+      stroke: black;
+      stroke-width: 8;
+      transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+        stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .line1 {
+      stroke-dasharray: 60 207;
+      stroke-width: 8;
+    }
+    .line2 {
+      stroke-dasharray: 60 60;
+      stroke-width: 8;
+    }
+    .line3 {
+      stroke-dasharray: 60 207;
+      stroke-width: 8;
+    }
+    .opened .line1 {
+      stroke-dasharray: 90 207;
+      stroke-dashoffset: -134;
+      stroke-width: 8;
+    }
+    .opened .line2 {
+      stroke-dasharray: 1 60;
+      stroke-dashoffset: -30;
+      stroke-width: 8;
+    }
+    .opened .line3 {
+      stroke-dasharray: 90 207;
+      stroke-dashoffset: -134;
+      stroke-width: 8;
     }
   }
-
-  h3 {
-    color: white;
-    font-size: 20px;
-    padding: 40px 40px 20px 40px;
-    text-align: center;
-  }
-
-  p {
-    color: white;
-    font-size: 16px;
-    line-height: 20px;
-    text-align: justify;
-  }
-}
-
-////BREADCRUMB////
-.bread-crumb {
-  position: relative;
-  top: 200px;
-
-  ul {
-    list-style: none;
+  .menu {
+    background-color: #00a0dd;
+    z-index: 1;
+    position: absolute;
+    width: 1200px;
+    position: fixed;
+    top: 90px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    padding: 140px 100px 60px 100px;
     display: flex;
-
-    li {
-      padding-right: 15px;
-
-      &:first-child a:after {
-        content: "->";
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav-level-1 {
+    width: 450px;
+  }
+  .nav-level-1,
+  .nav-level-2 {
+    list-style: none;
+    font-size: 30px;
+    line-height: 70px;
+    font-weight: bold;
+  }
+  .has-subPage {
+    display: flex;
+    justify-content: space-between;
+  
+    &:after {
+      content: "+";
+    }
+  }
+  .nav-level-1 li a,
+  p {
+    text-decoration: none;
+    color: white;
+  
+    &:hover {
+      color: black;
+      cursor: pointer;
+    }
+  }
+  
+  .nav-level-2 li a {
+    text-decoration: none;
+    color: black;
+  
+    &:hover {
+      color: white;
+    }
+  }
+  
+  .menu-teaser {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+    .menu-teaser-image {
+      height: 40px;
+      width: 20px;
+      background-color: #ee8018;
+  
+      &:before {
+        content: "";
+        display: block;
         position: relative;
-        padding-left: 15px;
+        left: -30px;
+        bottom: 20px;
+        height: 60px;
+        width: 20px;
+        background-color: #ee8018;
       }
-
-      &:last-child a {
-        color: #00a0dd;
-        border-bottom: 3px solid #00a0dd;
+      &:after {
+        content: "";
+        display: block;
+        position: relative;
+        left: 30px;
+        top: -110px;
+        height: 90px;
+        width: 20px;
+        background-color: #ee8018;
       }
-
-      a {
-        text-decoration: none;
-        font-weight: bold;
-        color: #888888;
-
-        &:hover {
+    }
+  
+    h3 {
+      color: white;
+      font-size: 20px;
+      padding: 40px 40px 20px 40px;
+      text-align: center;
+    }
+  
+    p {
+      color: white;
+      font-size: 16px;
+      line-height: 20px;
+      text-align: justify;
+    }
+  }
+  
+  ////BREADCRUMB////
+  .bread-crumb {
+    position: relative;
+    top: 200px;
+  
+    ul {
+      list-style: none;
+      display: flex;
+  
+      li {
+        padding-right: 15px;
+  
+        &:first-child a:after {
+          content: "->";
+          position: relative;
+          padding-left: 15px;
+        }
+  
+        &:last-child a {
           color: #00a0dd;
           border-bottom: 3px solid #00a0dd;
         }
-      }
-    }
-  }
-}
-////WRAPPER////
-.content-wrapper {
-  margin: 0 auto;
-  width: 1200px;
-
-  main {
-    padding-bottom: 400px;
-  }
-
-  h1 {
-    padding: 250px 0 80px 0;
-
-    &:after {
-      content: "";
-      background-color: #00a0dd;
-      position: relative;
-      display: block;
-      width: 60px;
-      height: 6px;
-      bottom: -34px;
-    }
-  }
-
-  .content-element-1 {
-    background-color: white;
-    color: black;
-    padding: 40px 80px 80px 80px;
-
-    .image-title {
-      padding: 0px 0px 40px 0px;
-    }
-
-    .image-container {
-      width: 100%;
-      height: 700px;
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-    }
-
-    h2 {
-      font-weight: bold;
-      font-size: 24px;
-      line-height: 32px;
-      padding: 40px 0px 10px 0px;
-    }
-    h3 {
-      font-size: 20px;
-      font-weight: normal;
-      font-style: italic;
-      padding: 0px 0px 20px 0px;
-    }
-    p {
-      color: black;
-      font-size: 18px;
-      line-height: 27px;
-      cursor: auto;
-    }
-  }
-
-  .content-element-2 {
-    padding-top: 40px;
-    .teaser {
-      background-color: #ee8018;
-      width: 100%;
-      height: 80px;
-      display: flex;
-      justify-content: space-between;
-      padding: 0px 80px;
-      line-height: 80px;
-
-      a {
-        color: white;
-        font-weight: bold;
-        font-size: 18px;
-        text-decoration: none;
-        transition: all 0.2s ease;
-
-        &:last-child:before {
-          content: "->";
-          padding-right: 10px;
-        }
-
-        &:hover {
-          text-decoration: underline;
-        }
-      }
-    }
-    .teaser-content {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background-color: white;
-      padding: 80px;
-
-      .teaser-text {
-        width: 600px;
-
-        h3 {
-          font-size: 20px;
-          padding: 0px 0px 40px 0px;
-        }
-
-        p {
-          color: black;
-          font-size: 18px;
-          line-height: 27px;
-          cursor: auto;
+  
+        a {
+          text-decoration: none;
+          font-weight: bold;
+          color: #888888;
+  
+          &:hover {
+            color: #00a0dd;
+            border-bottom: 3px solid #00a0dd;
+          }
         }
       }
     }
   }
-}
-
-////FOOTER////
-.footer-container {
-  background-color: white;
-  overflow: hidden;
-  margin-top: 200px;
-
-  .footer {
-    height: 90px;
-    width: 1200px;
+  ////WRAPPER////
+  .content-wrapper {
     margin: 0 auto;
-
-    ul {
-      display: flex;
-      list-style: none;
-      justify-content: space-around;
-      line-height: 90px;
-
-      li a {
-        color: black;
-        text-decoration: none;
+    width: 1200px;
+  
+    main {
+      padding-bottom: 400px;
+    }
+  
+    h1 {
+      padding: 250px 0 80px 0;
+  
+      &:after {
+        content: "";
+        background-color: #00a0dd;
+        position: relative;
+        display: block;
+        width: 60px;
+        height: 6px;
+        bottom: -34px;
+      }
+    }
+  
+    .content-element-1 {
+      background-color: white;
+      color: black;
+      padding: 40px 80px 80px 80px;
+  
+      .image-title {
+        padding: 0px 0px 40px 0px;
+      }
+  
+      .image-container {
+        width: 100%;
+        height: 700px;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+  
+      h2 {
         font-weight: bold;
-        font-size: 14px;
-        text-transform: uppercase;
-
-        &:hover {
-          border-bottom: 2px solid black;
+        font-size: 24px;
+        line-height: 32px;
+        padding: 40px 0px 10px 0px;
+      }
+      h3 {
+        font-size: 20px;
+        font-weight: normal;
+        font-style: italic;
+        padding: 0px 0px 20px 0px;
+      }
+      p {
+        color: black;
+        font-size: 18px;
+        line-height: 27px;
+        cursor: auto;
+      }
+    }
+  
+    .content-element-2 {
+      padding-top: 40px;
+      .teaser {
+        background-color: #ee8018;
+        width: 100%;
+        height: 80px;
+        display: flex;
+        justify-content: space-between;
+        padding: 0px 80px;
+        line-height: 80px;
+  
+        a {
+          color: white;
+          font-weight: bold;
+          font-size: 18px;
+          text-decoration: none;
+          transition: all 0.2s ease;
+  
+          &:last-child:before {
+            content: "->";
+            padding-right: 10px;
+          }
+  
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
+      .teaser-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: white;
+        padding: 80px;
+  
+        .teaser-text {
+          width: 600px;
+  
+          h3 {
+            font-size: 20px;
+            padding: 0px 0px 40px 0px;
+          }
+  
+          p {
+            color: black;
+            font-size: 18px;
+            line-height: 27px;
+            cursor: auto;
+          }
         }
       }
     }
   }
-}
-
-////Click-Classes////
-.hidden {
-  display: none;
-}
-
-.active {
-  color: black;
-
-  &:after {
-    content: "-";
+  
+  ////FOOTER////
+  .footer-container {
+    background-color: white;
+    overflow: hidden;
+    margin-top: 200px;
+  
+    .footer {
+      height: 90px;
+      width: 1200px;
+      margin: 0 auto;
+  
+      ul {
+        display: flex;
+        list-style: none;
+        justify-content: space-around;
+        line-height: 90px;
+  
+        li a {
+          color: black;
+          text-decoration: none;
+          font-weight: bold;
+          font-size: 14px;
+          text-transform: uppercase;
+  
+          &:hover {
+            border-bottom: 2px solid black;
+          }
+        }
+      }
+    }
   }
-}
-
-.menu.hidden-teaser > .menu-teaser {
-  display: none;
-}
+  
+  ////Click-Classes////
+  .hidden {
+    display: none;
+  }
+  
+  .active {
+    color: black;
+  
+    &:after {
+      content: "-";
+    }
+  }
+  
+  .menu.hidden-teaser > .menu-teaser {
+    display: none;
+  }
+  
