--- a/Ressources/Private/styles/scss/subpage.scss
+++ b/Ressources/Private/styles/scss/subpage.scss
@@ -375,6 +375,14 @@
         align-items: center;
         background-color: white;
         padding: 80px;
+
+        img {
+          transition: all 0.3s ease;
+          
+          &:hover {
+            transform: scale(1.02);
+          }
+        }
   
         .teaser-text {
           width: 600px;
@@ -399,32 +407,9 @@
   .footer-container {
     background-color: white;
     overflow: hidden;
-    margin-top: 200px;
-  
-    .footer {
-      height: 90px;
-      width: 1200px;
-      margin: 0 auto;
-  
-      ul {
-        display: flex;
-        list-style: none;
-        justify-content: space-around;
-        line-height: 90px;
-  
-        li a {
-          color: black;
-          text-decoration: none;
-          font-weight: bold;
-          font-size: 14px;
-          text-transform: uppercase;
-  
-          &:hover {
-            border-bottom: 2px solid black;
-          }
-        }
-      }
-    }
+    margin-top: 400px;
+    width: 1200px;
+    margin: 0 auto;
   }
   
   ////Click-Classes////
