--- a/Ressources/Private/styles/scss/subpage.scss
+++ b/Ressources/Private/styles/scss/subpage.scss
@@ -366,6 +366,7 @@
   
           &:hover {
             text-decoration: underline;
+              margin-left: 5px;
           }
         }
       }
