--- a/Ressources/Private/styles/scss/main.scss
+++ b/Ressources/Private/styles/scss/main.scss
@@ -346,8 +346,8 @@ p {
                 position: relative;
                 top: 20px;
                 display: block;
-                width: 50px;
-                height: 2px;
+                width: 45px;
+                height: 3px;
                 background-color: #00a0dd;
               }
             }
@@ -374,6 +374,7 @@ p {
 
               &:hover {
                 border-bottom: 2px solid #00a0dd;
+                margin-left: 5px;
               }
             }
           }
@@ -388,7 +389,7 @@ p {
         transition: all 0.3s ease;
 
         &:hover {
-          transform: scale(1.05);
+          transform: translateX(10px);
           background-color: #3ac1f7;
         }
       }
@@ -450,22 +451,10 @@ p {
 
               &:hover {
                 border-bottom: 2px solid #00a0dd;
+                margin-left: 5px;
               }
             }
           }
-        }
-      }
-      .services-button {
-        background-color: #00a0dd;
-        width: fit-content;
-        padding: 20px 40px;
-        color: white;
-        text-decoration: none;
-        transition: all 0.3s ease;
-
-        &:hover {
-          transform: scale(1.05);
-          background-color: #3ac1f7;
         }
       }
     }
@@ -517,6 +506,7 @@ p {
 
           &:hover {
             border-bottom: 2px solid #00a0dd;
+            margin-left: 5px;
           }
         }
       }
